# dart-ffi-demo

./: README.md  pubspec.yaml
code/c/int-int/: CMakeLists.txt  primitives.c
code/c/str-struct/: CMakeLists.txt  structs.c  structs.def  structs.h
code/c/void-void/: CMakeLists.txt  hello.c
lib/: ffi_demo.dart
lib/c/: int-int.dart  str-struct.dart  void-void.dart
